e2e/create-networkpolicy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: create-networkpolicy
spec:
  description: Verify creating an augmented NetworkPolicy creates a standard NetworkPolicy
  steps:
    - name: create-augmented-networkpolicy
      try:
        - apply:
            resource:
              apiVersion: networking.ayoy.se/v1alpha1
              kind: NetworkPolicy
              metadata:
                name: test-create
              spec:
                podSelector:
                  matchLabels:
                    app: web
                policyTypes:
                  - Egress
                egress:
                  - ports:
                      - protocol: TCP
                        port: 443
                    to:
                      - hostname: kubernetes.default.svc.cluster.local
    - name: assert-standard-networkpolicy-created
      try:
        - assert:
            resource:
              apiVersion: networking.k8s.io/v1
              kind: NetworkPolicy
              metadata:
                name: test-create
              spec:
                podSelector:
                  matchLabels:
                    app: web
                policyTypes:
                  - Egress
                egress:
                  - ports:
                      - protocol: TCP
                        port: 443
    - name: assert-status-updated
      try:
        - assert:
            resource:
              apiVersion: networking.ayoy.se/v1alpha1
              kind: NetworkPolicy
              metadata:
                name: test-create
              status:
                conditions:
                  - type: Ready
                    status: "True"
